<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_5sdp"
    android:padding="@dimen/_5sdp"
    style="@style/AppTheme"
    tools:context=".MainActivity">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvWelcomeMsg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:gravity="center"
        android:text="@string/text_welcome"

        android:textSize="@dimen/_16ssp"
        android:fontFamily="@font/montserrat_semi_bold"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/spinnerOption"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_30sdp"
        android:hint="@string/text_signup_options"
        android:focusable="false"
        android:focusableInTouchMode="true"
        app:layout_constraintTop_toBottomOf="@id/tvWelcomeMsg">

        <AutoCompleteTextView
            android:id="@+id/filled_exposed_dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/montserrat_regular"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:visibility="gone"
        android:focusable="false"
        android:focusableInTouchMode="true"
        app:layout_constraintTop_toBottomOf="@id/spinnerOption">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_enter_your_email_id"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/montserrat_regular"
            android:inputType="textEmailAddress"
            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMobileNumber"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:visibility="gone"
        android:focusable="false"
        android:focusableInTouchMode="true"
        app:layout_constraintTop_toBottomOf="@id/tilEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMobileNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_enter_your_mobile_no"
            android:textSize="@dimen/_14ssp"
            android:fontFamily="@font/montserrat_regular"
            android:inputType="number"
            android:focusableInTouchMode="true"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tilMobileNumber"
        android:layout_marginTop="@dimen/_10sdp"
        android:textSize="@dimen/_16ssp"
        android:fontFamily="@font/ubuntu_bold"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/colorAccent"
        android:text="@string/text_go"/>

    <View android:id="@+id/separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/btnDone"
        />


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvBtnGoogleSignup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".5"
        android:gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:drawableTop="@drawable/ic_google_active_icon"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/tv_google"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvBtnFbSignup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".5"
        android:gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/ubuntu_bold"
        android:text="@string/tv_facebook"
        android:textSize="@dimen/_14ssp"
        android:drawableTop="@drawable/ic_facebook_active_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/separator" />

    <View android:id="@+id/separator2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintTop_toBottomOf="@id/tvBtnFbSignup"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTestMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_50sdp"
        android:gravity="center"
        android:text="@string/text_test"

        android:textSize="@dimen/_16ssp"
        android:fontFamily="@font/montserrat_semi_bold"
        app:layout_constraintTop_toBottomOf="@id/separator2"/>


</androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>